# glsl-minifier

./: CMakeLists.txt  README.md
include/: glsl_minifier.h
src/: main.cpp  minify.cpp
